Fix display bug on small screens

--- a/_attachments/css/app.css
+++ b/_attachments/css/app.css
@@ -10,6 +10,7 @@
   font-size:1.1em;
   display:inline-block;
   width:70px;
+  max-width:100%;
 }
 
 .label-highdanger {
